--- a/PestIdentification.ipynb
+++ b/PestIdentification.ipynb
@@ -24,7 +24,7 @@
         }
       },
       "id": "8DkwSO9dlTJ1",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "initial_id",
       "metadata": {
         "collapsed": true,
@@ -95,10 +95,12 @@
         "        return image\n",
         "\n",
         "tranform = transforms.Compose([\n",
-        "    transforms.Resize((256, 256)),\n",
+        "    transforms.RandomResizedCrop(224),\n",
+        "    transforms.RandomHorizontalFlip(),\n",
         "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\n",
         "    transforms.Lambda(remove_non_three_channels),\n",
-        "])   # 3 256 256\n",
+        "])\n",
         "\n",
         "# 训练数据\n",
         "root_dir = 'Pest-Identification/dataset/train'\n",
@@ -109,6 +111,15 @@
         "\n",
         "# 测试数据\n",
         "root_dir = 'Pest-Identification/dataset/test'\n",
+        "\n",
+        "tranform = transforms.Compose([\n",
+        "    transforms.Resize(256),\n",
+        "    transforms.CenterCrop(224),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\n",
+        "    transforms.Lambda(remove_non_three_channels),\n",
+        "])\n",
+        "\n",
         "test_dataset = torchvision.datasets.ImageFolder(root=root_dir, transform=tranform)\n",
         "\n",
         "# 过滤掉None值\n",
@@ -122,7 +133,7 @@
         "id": "14d9ac3011154933"
       },
       "id": "14d9ac3011154933",
-      "execution_count": 3
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -141,8 +152,7 @@
         "train_data_size = len(train_dataset)\n",
         "test_data_size = len(test_dataset)\n",
         "print(\"train: \", train_data_size)\n",
-        "print(\"test: \", test_data_size)\n",
-        "\n"
+        "print(\"test: \", test_data_size)"
       ],
       "metadata": {
         "ExecuteTime": {
@@ -156,7 +166,7 @@
         "outputId": "c12e0dba-0127-43a3-fbbd-c62a907f8c65"
       },
       "id": "706689793b63eaa5",
-      "execution_count": 5
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -298,7 +308,7 @@
         "outputId": "1ae91546-8d7e-46dc-b557-019bcd4f43e8"
       },
       "id": "f4785abebe7f1eec",
-      "execution_count": 7
+      "execution_count": null
     }
   ],
   "metadata": {
